--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -13,7 +13,7 @@
       <a class="navbar-brand" href="{{ url_for('home') }}">Анализатор страниц</a>
         <div id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link " href="{{ url_for('post_url') }}">Сайты</a></li>
+          <li class="nav-item"><a class="nav-link " href="{{ url_for('get_urls_list') }}">Сайты</a></li>
         </ul>
         </div>
     </nav>
