--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -19,17 +19,15 @@
     </nav>
   </header>
 
-    {% block notifications %}
-    {% if messages %}
-    <div>
-      <ul class="list-group">
-        {% for category, message in messages %}
-        <li class="list-group-item list-group-item-{{ category }}">{{ message }}</li>
-        {% endfor %}
-      </ul>
-    </div>
-    {% endif %}
-    {% endblock %}
+  {% block notifications %}
+  {% if messages %}
+  <div>
+    {% for category, message in messages %}
+    <div class="alert alert-{{ category }}">{{ message }}</div>
+    {% endfor %}
+  </div>
+  {% endif %}
+  {% endblock %}
 
   <main class="flex-grow-1">
     {% block content %}{% endblock %}
