--- a/page_analyzer/templates/url_id.html
+++ b/page_analyzer/templates/url_id.html
@@ -22,5 +22,37 @@
       </tbody>
     </table>
   </div>
+  
+  <h2 class="mt-5 mb-3">Проверки</h2>
+    <form method="post" action="{{ url_for('', id=url.id) }}">
+    <input type="submit" class="btn btn-primary" value="Запустить проверку">
+    </form>
+
+  <div>
+    <table class="table table-bordered table-hover mt-2" data-test="checks">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Код ответа</th>
+        <th>h1</th>
+        <th>title</th>
+        <th>description</th>
+        <th>Дата создания</th>
+      </tr>
+    </thead>
+    <tbody>
+    {% for check in checks_list %}
+    <tr>
+      <td>{{ check.id }}</td>
+      <td>{{ check.response_code if check.response_code else ' ' }}</td>
+      <td>{{ check.h1 if check.h1 else ' ' }}</td>
+      <td>{{ check.title if check.title else ' ' }}</td>
+      <td>{{ check.description  if check.description else ' ' }}</td>
+      <td>{{ check.created_at }}</td>
+    </tr>
+    {% endfor %}
+    </tbody>
+    </table>
+  </div>
 </div>
 {% endblock %}
