--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -10,7 +10,7 @@
   <body class="min-vh-100 d-flex flex-column">
   <header class="flex-shrink-0">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
-      <a class="navbar-brand" href="{{ url_for('home') }}">Анализатор страниц</a>
+      <a class="navbar-brand" href="{{ url_for('show_homepage') }}">Анализатор страниц</a>
         <div id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link " href="{{ url_for('get_urls_list') }}">Сайты</a></li>
