--- a/page_analyzer/templates/url_id_error.html
+++ b/page_analyzer/templates/url_id_error.html
@@ -4,7 +4,7 @@
   <h1>Страница не найдена</h1>
 
   <p>Здесь нет того, что вы ищете</p>
-  <p><a href="{{ url_for('home') }}">Вернуться на главную</a></p>
+  <p><a href="{{ url_for('show_homepage') }}">Вернуться на главную</a></p>
 
 </div>
 {% endblock %}
